feat: renamed the first button id and added a clearButton to activity_main.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,9 @@
         android:id="@+id/textViewResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="186dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="186dp"
-        android:layout_marginBottom="53dp"
+        android:layout_marginTop="32dp"
         android:text="@string/result"
         android:textSize="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,28 +24,22 @@
         android:id="@+id/editTextNumber1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="176dp"
-        android:layout_marginEnd="87dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="128dp"
         android:ems="10"
         android:hint="@string/enter_first_number"
         android:inputType="number"
         android:singleLine="true"
         android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextNumber2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="114dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="87dp"
+        android:layout_marginTop="32dp"
         android:autofillHints="First Number"
         android:ems="10"
         android:hint="@string/enter_second_number"
@@ -62,16 +52,23 @@
         tools:ignore="LabelFor" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/operatorButton"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="138dp"
+        android:layout_marginTop="24dp"
         android:text="@string/add_numbers"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
+
+    <Button
+        android:id="@+id/clearButton"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/clear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/operatorButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
